# cuda-rt

./: CMakeLists.txt  runBuddha.sh  runDog.sh  runLogcabin.sh  runLuxo.sh  runRobotDog.sh  runUllyr.sh
blender/: alignment-fixed.blend  distance.blend  occlusion.blend  orientation.blend
inc/: .tiny_obj_loader.h.swp  .vec.h.swp  Light.h  bbox.h  bsphere.cuh  bvh.cuh  bvh.h  bvhl.cuh  camera.h  common.h  debug.h  indexing.h  isect.h  material.h  mrand.cuh  mrand.h  ray.h  raytracer.h  scene.h  scene.h.orig  tiny_obj_loader.h  tris.h.orig  vec.h
kernels/: Light.cu  bvh.cu  bvh.cu.orig  bvhl.cu  camera.cu  material.cu  mrand.cu  raytracer.cu  scene.cu  scene.cu.orig
objs/funyz/: logcabin.mtl  luxo.mtl
objs/tests/: alignment.md  alignment.mtl  alignment4.mtl  alignment6.mtl  distance.md  occlusion.md  occlusion.mtl  orientation.md  orientation.mtl  sanity.mtl
objs/testyz/: bvh_simple3.mtl  distance1.mtl  distance2.md  occlusion1.mtl  oneplane3.mtl  sanity1.mtl
results/: buddha.out  cathedral.out  fairy.out  logcabin.out  luxo.out  robotdog.out  ullyr.out
src/: .scene.cpp.swp  bvh.cpp  bvhl.cpp  main.cpp  ray.cpp  scene.cpp  scene.cpp.orig
